movie textures hogging cpu and not drawing in rendered viewport. #44633

Closed
opened 2015-05-07 20:14:58 +02:00 by ratty redemption · 11 comments
- Operating System, Graphics card ---

cpu: intel core i3 2350 2.3 ghz
ram: 4 gb
gfx: intel hd graphics 3000
os: windows 7 home premium sp 1

- Blender version with error, and version that worked ---

error found in: 2.74 165598e win64.
was working in: 2.74 stable win64.

- Short description of error ---

movie textures hogging cpu and not drawing in rendered viewport.

on my system this can be anything from 25-100% cpu and can result in a crash.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

affects factory settings.

my movie textures no longer display in the recent builds, when switching viewport to rendered mode. in which case blender won't draw any objects, even ones with still images as textures. wire frame, solid shading are still working, so is material shading, so i know the movie textures are loading.

i haven't altered the movie textures, and the same .blend file (attached below) will work in the 2.74 stable build. i don't have any other dev builds older than a few days to test.

untitled.blend

- Operating System, Graphics card --- cpu: intel core i3 2350 2.3 ghz ram: 4 gb gfx: intel hd graphics 3000 os: windows 7 home premium sp 1 - Blender version with error, and version that worked --- error found in: 2.74 165598e win64. was working in: 2.74 stable win64. - Short description of error --- movie textures hogging cpu and not drawing in rendered viewport. *on my system this can be anything from 25-100% cpu and can result in a crash.* - Steps for others to reproduce the error (preferably based on attached .blend file) --- affects factory settings. my movie textures no longer display in the recent builds, when switching viewport to rendered mode. in which case blender won't draw any objects, even ones with still images as textures. wire frame, solid shading are still working, so is material shading, so i know the movie textures are loading. i haven't altered the movie textures, and the same .blend file (attached below) will work in the 2.74 stable build. i don't have any other dev builds older than a few days to test. [untitled.blend](https://archive.blender.org/developer/F171221/untitled.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @rattyredemption

Added subscriber: @rattyredemption

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo

Found to be true.

Should also be noted this is Blender Render engine, not cycles.

Found to be true. Should also be noted this is Blender Render engine, not cycles.

@FloridaJo thanks for confirming this. and i only use blender's native renderer.

@FloridaJo thanks for confirming this. and i only use blender's native renderer.
Brecht Van Lommel self-assigned this 2015-05-10 20:50:13 +02:00

This issue was referenced by c20c07f27a

This issue was referenced by c20c07f27a5f5497db219e5c0db8c9cc2377e37a

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This was broken when @dfelinto committed multiview.

This code is totally confusing and could use a cleanup, but after the fix it should at least be working as before now.

This was broken when @dfelinto committed multiview. This code is totally confusing and could use a cleanup, but after the fix it should at least be working as before now.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c20c07f27a.

Closed by commit c20c07f27a.

thanks guys, it appears to be working fine now.

thanks guys, it appears to be working fine now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44633
No description provided.