Fix T44633: image cache broken for movies and sequences.

After multiview, it was continuously unloading/loading image buffers from
the cache due to mismatch in cache insert and lookup keys.